<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_apperance"
    android:backgroundTint="#8C383434"
    android:backgroundTintMode="screen"
    android:visibility="visible"
    tools:context=".activities.LoginActivity">

    <!-- App title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/agency_fb_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Bottom menu -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:weightSum="2.0"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkBrown"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Login fields -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/bg_inputs"
        android:orientation="vertical"
        android:paddingLeft="33dp"
        android:paddingTop="20dp"
        android:paddingRight="33dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!-- Email field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:theme="@style/EditTextTheme"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>