<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@color/white"
    tools:context=".fragments.UserManagerFragment">

    <LinearLayout
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"

            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_arrow_back_black"
            android:text="" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1.2"
            android:text="@string/user_manager"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- Change password fields -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_inputs"
        android:orientation="vertical"

        android:layout_marginLeft="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="33dp"
        android:paddingLeft="33dp"
        android:paddingTop="20dp"
        android:paddingRight="33dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_title">

        <!-- Old password field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/manager_old_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manager_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/prompt_old_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/manager_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manager_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/prompt_new_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm password field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/manager_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manager_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_password"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/darkBrown"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/update_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete_user"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_red_dark"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>