<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.KitchenManagerFragment">


    <LinearLayout
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"

            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_arrow_back_black"
            android:text="" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1.2"
            android:text="@string/kitchen_menager"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="33dp"
        android:background="@color/bg_inputs"
        android:orientation="vertical"
        android:paddingLeft="33dp"

        android:paddingRight="33dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_title">


        <!-- Spinner - dropdown field -->
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/kitchen_dropdown_list_2"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/transparentWhite"
            android:spinnerMode="dialog" />

        <!-- Name field -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:weightSum="3.0"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_kitchen"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/select_kitchen_2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_kitchen"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"

                android:fontFamily="@font/nunito_regular"
                android:text="@string/delete_kitchen"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kitchen_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kitchen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kitchen_name"
                android:inputType="textEmailAddress"
                android:theme="@style/EditTextTheme" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kitchen_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:theme="@style/EditTextTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_kitchen"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/create_or_join"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>