<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/background_apperance"
    android:backgroundTint="#8C383434"
    android:backgroundTintMode="screen"
    tools:context=".activities.SelectKitchenActivity">

    <!-- App title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/agency_fb_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Selection fields -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/bg_inputs"
        android:orientation="vertical"
        android:paddingLeft="33dp"
        android:paddingTop="20dp"
        android:paddingRight="33dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!--Box title -->
        <TextView

            android:layout_marginHorizontal="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:textAlignment="center"
            android:text="@string/select_kitchen"
            android:textColor="@color/white"
            android:textSize="25sp"

            />
        <!-- Spinner - dropdown field -->
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/kitchen_dropdown_list"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:spinnerMode="dialog"
            android:background="@color/transparentWhite"/>


        <!-- Go to create/join kitchen -->
        <TextView
            android:id="@+id/btn_switch_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/switch_create"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:textSize="15sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Bottom menu -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:weightSum="2.0"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_let_frorage"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/darkBrown"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/lets_frorage"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>