<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_apperance"
    android:visibility="visible"
    android:backgroundTint="#8C383434"
    android:backgroundTintMode="screen"
    android:id="@+id/confirm_container"
    tools:context=".activities.ConfirmAccountActivity">

    <!-- App title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/agency_fb_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Confirmation fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/bg_inputs"
        android:orientation="vertical"
        android:paddingLeft="33dp"
        android:paddingTop="20dp"
        android:paddingRight="33dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_marginHorizontal="38dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:textAlignment="center"
            android:text="@string/confirm_account"
            android:textColor="@color/white"
            android:textSize="25sp"

            />

        <!-- Token field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_token_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_code"
                android:theme="@style/EditTextTheme"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Resend email text button -->
        <TextView
            android:id="@+id/resend_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/resend_email"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:textSize="15sp" />

    </LinearLayout>

    <!-- Bottom menu -->
    <LinearLayout
        android:id="@+id/linearLayout"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:weightSum="2.0"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_account"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/darkBrown"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/confirm_account"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>